src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__thermo_style__test__custom_five.snap
---
source: src/command_syntax/syntaxes/thermo_style.rs
expression: "syntax().parse(vec![\"thermo_style\", \"custom\", \"step\", \"temp\", \"press\",\n\"epair\", \"ecoul\"])"
---
ParseResult {
    command_name: "thermo_style",
    positional: [
        "custom",
    ],
    style: Some(
        "custom",
    ),
    style_args: [
        "step",
        "temp",
        "press",
        "epair",
        "ecoul",
    ],
    kwargs: [],
}
