src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__thermo_style__test__custom_none.snap
---
source: src/command_syntax/syntaxes/thermo_style.rs
expression: "syntax().parse(vec![\"thermo_style\", \"custom\"])"
---
ParseResult {
    command_name: "thermo_style",
    positional: [
        "custom",
    ],
    style: Some(
        "custom",
    ),
    style_args: [],
    kwargs: [],
}
