src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__thermo_style__test__multi.snap
---
source: src/command_syntax/syntaxes/thermo_style.rs
expression: "syntax().parse(vec![\"thermo_style\", \"multi\"])"
---
ParseResult {
    command_name: "thermo_style",
    positional: [
        "multi",
    ],
    style: Some(
        "multi",
    ),
    style_args: [],
    kwargs: [],
}
