src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__thermo_style__test__one.snap
---
source: src/command_syntax/syntaxes/thermo_style.rs
expression: "syntax().parse(vec![\"thermo_style\", \"one\"])"
---
ParseResult {
    command_name: "thermo_style",
    positional: [
        "one",
    ],
    style: Some(
        "one",
    ),
    style_args: [],
    kwargs: [],
}
