src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__thermo_style__test__yaml.snap
---
source: src/command_syntax/syntaxes/thermo_style.rs
expression: "syntax().parse(&command_helper(\"thermo_style yaml\\n\")).unwrap()"
---
ParseResult {
    command_name: "thermo_style",
    positionals: [
        Argument {
            kind: Word(
                "yaml",
            ),
            span: Span {
                start: Point {
                    row: 0,
                    column: 13,
                },
                end: Point {
                    row: 0,
                    column: 17,
                },
            },
        },
    ],
    style: Some(
        "yaml",
    ),
    style_args: [],
    kwargs: [],
}
